# foreteller

./: README.md  main.py  pyproject.toml  tabular_transformer.py
src/foreteller/: __init__.py  foreteller.py
