[project]
name = "foreteller"
version = "0.1.0"
description = "A Transformer encoder for tabular data"
readme = "README.md"
authors = [
    { name = "Ulf Mertens", email = "mertens.ulf@gmail.com" }
]   
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "numpy>=2.3.2",
    "ruff>=0.12.8",
    "torch>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


